css/mainStyle.css
form{ 
        font-family: arial;
        background-color: gray;
}
#logInDiv{

        margin-right:0px;
        margin-left:auto;
        display:block;
        width: 550px;
	height: 50px;
}
#createAccountDiv{
        
        float:right;
        width: 600px;
	height: 1000px;
}

#createAccount p{
        
}

#createAccount input{

        display:inline;
}

#Flavor {

        width:1000px;

}

#Flavor td {


        border: 1px solid black;
}

